--- a/panda_kiosk/package.json
+++ b/panda_kiosk/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "eslint-config-next": "^15.0.1",
+    "next": "^15.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
