--- a/panda_kiosk/package.json
+++ b/panda_kiosk/package.json
@@ -14,8 +14,8 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "lucide-react": "^0.454.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
