--- a/panda_manager/package.json
+++ b/panda_manager/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
+    "@auth/pg-adapter": "^1.7.4",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
@@ -21,14 +23,18 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
+    "pg": "^8.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
