--- a/panda_kiosk/package.json
+++ b/panda_kiosk/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.3",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -19,17 +19,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.294.0",
     "pg": "^8.13.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "next": "^15.0.1",
