--- a/panda_manager/package.json
+++ b/panda_manager/package.json
@@ -21,6 +21,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.2",
+    "pg": "^8.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.13.3",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
