--- a/panda_manager/package.json
+++ b/panda_manager/package.json
@@ -20,10 +20,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.2",
     "pg": "^8.13.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
