--- a/panda_kiosk/package.json
+++ b/panda_kiosk/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.454.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
