--- a/panda_kiosk/package.json
+++ b/panda_kiosk/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.3.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.294.0",
+    "openai": "^4.76.0",
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
