--- a/panda_manager/package.json
+++ b/panda_manager/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
@@ -23,7 +27,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.2",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -35,7 +39,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
-    "@types/react": "^18",
+    "@types/react": "^18.3.14",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
